# fastapi-projects

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md
charts-backend/: README.md  Taskfile.yaml  pyproject.toml
hello-world/: Dockerfile  README.md  main.py
plotting-backend/: .gitignore  pyproject.toml
tutorial/: README.md  Taskfile.yml  main.py  pyproject.toml  test_main.http
